5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4178/executions/1764_672.log
== TEST (2019-05-23 16:02:26) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
from numpy import *

p = ones(6)
print(p)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 16:04:51) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
from numpy import *

p = ones(int(input("Digite um Numero: ")))

print(p)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 16:04:58) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
from numpy import *

p = ones(int(input("Digite um Numero: ")))

print(p)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-23 16:05:02) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
from numpy import *

p = ones(int(input("Digite um Numero: ")))

print(p)
-- EXECUTION TIME:
0.380839
-- TEST CASE 1:
---- input:
34
---- correct output:
[1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1]
---- user output:
[1. 1. 1. 1. 1. 1. 1. 1. 1. 1. 1. 1. 1. 1. 1. 1. 1. 1. 1. 1. 1. 1. 1. 1.
 1. 1. 1. 1. 1. 1. 1. 1. 1. 1.]
-- TEST CASE 2:
---- input:
10
---- correct output:
[1 1 1 1 1 1 1 1 1 1]
---- user output:
[1. 1. 1. 1. 1. 1. 1. 1. 1. 1.]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 16:05:19) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
from numpy import *

p = ones(dtype(input("Digite um Numero: ")))

print(p)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 16:05:42) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
from numpy import *

p = ones(int(input("Digite um Numero: ")))
dtype = int
print(p)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-23 16:05:48) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
from numpy import *

p = ones(int(input("Digite um Numero: ")))
dtype = int
print(p)
-- EXECUTION TIME:
0.469687
-- TEST CASE 1:
---- input:
34
---- correct output:
[1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1]
---- user output:
[1. 1. 1. 1. 1. 1. 1. 1. 1. 1. 1. 1. 1. 1. 1. 1. 1. 1. 1. 1. 1. 1. 1. 1.
 1. 1. 1. 1. 1. 1. 1. 1. 1. 1.]
-- TEST CASE 2:
---- input:
10
---- correct output:
[1 1 1 1 1 1 1 1 1 1]
---- user output:
[1. 1. 1. 1. 1. 1. 1. 1. 1. 1.]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 16:06:08) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
from numpy import *
dtype = int
p = ones(int(input("Digite um Numero: ")))

print(p)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 16:06:13) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
from numpy import *
dtype = int
p = ones(int(input("Digite um Numero: ")))

print(p)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 16:06:16) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
from numpy import *
dtype = int
p = ones(int(input("Digite um Numero: ")))

print(p)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 16:06:19) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
from numpy import *
dtype = int
p = ones(int(input("Digite um Numero: ")))

print(p)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 16:15:01) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
from numpy import *
dtype = int
p = dtype(ones((input("Digite um Numero: ")))

print(p)
-- ERROR:
File "XXXX", line 6
    print(p)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 16:15:14) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
from numpy import *

p = (ones((input("Digite um Numero: ")))

print(p)
-- ERROR:
File "XXXX", line 6
    print(p)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 16:15:24) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
from numpy import *

p = (ones((input("Digite um Numero: "))))

print(p)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 16:15:34) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
from numpy import *

p = dtype(ones((input("Digite um Numero: "))))

print(p)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 16:15:44) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
from numpy import *

p = int(ones((input("Digite um Numero: "))))

print(p)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 16:16:20) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
from numpy import *

p = ones(int(input("Digite um Numero: ")))

print(p)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 16:16:23) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
from numpy import *

p = ones(int(input("Digite um Numero: ")))

print(p)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 16:16:48) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
from numpy import *

p = ones(float(input("Digite um Numero: ")))

print(p)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 16:17:29) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
from numpy import *

p = ones(int(input("Digite um Numero: ")))

print(p)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-23 16:17:36) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
from numpy import *

p = ones(int(input("Digite um Numero: ")))

print(p)
-- EXECUTION TIME:
0.460947
-- TEST CASE 1:
---- input:
34
---- correct output:
[1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1]
---- user output:
[1. 1. 1. 1. 1. 1. 1. 1. 1. 1. 1. 1. 1. 1. 1. 1. 1. 1. 1. 1. 1. 1. 1. 1.
 1. 1. 1. 1. 1. 1. 1. 1. 1. 1.]
-- TEST CASE 2:
---- input:
10
---- correct output:
[1 1 1 1 1 1 1 1 1 1]
---- user output:
[1. 1. 1. 1. 1. 1. 1. 1. 1. 1.]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 16:18:55) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
from numpy import *

p = int(input("Digite um Numero: "))
p2 = ones(p , dtype=int )

print(p)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 16:19:04) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
from numpy import *

p = int(input("Digite um Numero: "))
p2 = ones(p , dtype=int )

print(p2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 16:19:08) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
from numpy import *

p = int(input("Digite um Numero: "))
p2 = ones(p , dtype=int )

print(p2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-23 16:19:12) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
from numpy import *

p = int(input("Digite um Numero: "))
p2 = ones(p , dtype=int )

print(p2)
-- EXECUTION TIME:
0.447526
-- TEST CASE 1:
---- input:
34
---- correct output:
[1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1]
---- user output:
[1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1]
-- TEST CASE 2:
---- input:
10
---- correct output:
[1 1 1 1 1 1 1 1 1 1]
---- user output:
[1 1 1 1 1 1 1 1 1 1]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
